--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
