--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stream-io/video-react-sdk": "^1.24.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@types/bcryptjs": "^2.4.6",
@@ -43,6 +44,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "stream-chat": "^9.25.0",
+    "stream-chat-react": "^13.10.0",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
     "zod": "^4.1.12"
